# solana_accounts

client/: Cargo.toml
client/src/: main.rs  utils.rs
program/: Cargo.toml
program/src/: lib.rs
