[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.18.5"
solana-client = "1.18.5"
borsh = "0.10.3"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread","full"] }